--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,5 +7,19 @@
 }
 
 .leaflet-container {
-  height: 550px;
+  height: 650px;
+}
+
+.ping-pong-icon {
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px black;
+}
+
+.ping-pong-icon:after {
+  display: block;
+  width: 30px;
+  height: 30px;
+  content: "🏓";
+  font-size: 20px;
 }
